# flurry

./: .gitignore  .tool-versions  Dockerfile.api  Dockerfile.pg  Dockerfile.site  LICENSE  README.md  Taskfile.yaml  Taskfile.yml  docker-compose.yml  pyproject.toml  requirements.txt  schema.gql
.github/: releaser.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  ci.yml  release.yml
examples/todo/: __main__.py  test_todo.py
fete.core/: pyproject.toml
fete.core/fete/core/: aggregate.py  application.py  command.py  event.py  predicate.py  schema.py  storage.py  utils.py
fete.graphql/: pyproject.toml
fete.graphql/fete/graphql/: application.py  generator.py  scalars.py
fete.postgres/: pyproject.toml
fete.postgres/fete/postgres/: __init__.py  postgres.py
fete.web/: pyproject.toml
fete.web/fete/web/: application.py
flurry.core/: pyproject.toml
flurry.core/flurry/core/: application.py  context.py  query.py  subscription.py  utils.py
flurry.graphql/: pyproject.toml
flurry.graphql/flurry/graphql/: __init__.py  application.py  generator.py  scalars.py
flurry.postgres/: pyproject.toml
flurry.postgres/flurry/postgres/: __init__.py  postgres.py
flurry.util/: pyproject.toml
flurry.util/flurry/util/: __init__.py  json.py  rwlock.py
flurry.web/: pyproject.toml
flurry.web/flurry/web/: __init__.py  application.py
money/: __init__.py  __main__.py  __old.py  aggregate.py  app.py  command.py  deprecated_main.py  event.py  predicate.py  query.py  schema.py  user.py
money/application/: __init__.py  application.py
money/application/graphql/: __init__.py  generator.py  graphql.py  scalars.py
money/framework/: aggregate.py  application.py  command.py  event.py  predicate.py  query.py  schema.py  storage.py
money/framework/application/: application.py
money/framework/application/graphql/: generator.py  graphql.py
money/framework/graphql/: generator.py  scalars.py
money/framework/storage/: __init__.py  memory.py  postgres.py  sqlite.py  storage.py  utils.py
money/storage/: memory.py  postgres.py  sqlite.py  storage.py  utils.py
site/: codegen.yml  graphql.config.js  ops-codegen.js  package.json  preact.config.js  size-plugin.json  tsconfig.json
site/src/: gql-types.ts  index.ts
site/src/components/: app.tsx
site/src/components/auth-guard/: index.tsx
site/src/components/header/: index.tsx  style.scss
site/src/graphql/: operations.gql
site/src/hooks/: useAuth.ts  useQuery.ts
site/src/routes/home/: index.tsx
site/src/routes/register/: index.tsx
site/types/: preact-cli.d.ts
tests/: __init__.py  test_aggregate.py  test_application.py  test_graphql_scalars.py  test_graphql_schema.py  test_postgres_storage.py  test_predicate.py  test_predicate_simplification.py  test_rwlock.py  test_schema.py  test_util_rwlock.py  test_web_application.py
tests/__snapshots__/: test_graphql_schema.ambr  test_predicate_simplification.ambr
tests/application/graphql/: test_scalars.py
tests/framework/: test_aggregate.py  test_application.py  test_predicate.py  test_schema.py  test_storage.py
tests/framework/application/graphql/: test_scalars.py
tests/framework/graphql/: test_scalars.py
tests/framework/storage/: test_memory.py  test_postgresql.py  test_predicate_simplification.py
tests/framework/storage/__snapshots__/: test_predicate_simplification.ambr
tests/storage/: test_databases.py  test_memory.py  test_postgresql.py  test_predicate_simplification.py
tests/storage/__snapshots__/: test_predicate_simplification.ambr
