[tool.poetry]
name = "money"
version = "0.1.0"
description = ""
authors = ["Jacob McCollum <jacob.r.mccollum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
uuid = "^1.30"
pytest-asyncio = "^0.16.0"
aiopg = "^1.3.3"
graphene = "^3.0"
graphql-server = "^3.0.0-beta.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
aiopg = "^1.3.3"
aiosqlite = "^0.17.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
