[tool.poetry]
name = "money"
version = "0.1.0"
description = ""
authors = ["Jacob McCollum <jacob.r.mccollum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uuid = "^1.30"
aiopg = "^1.3.3"
bcrypt = "^3.2.0"
aiohttp = "^3.8.1"
aiosqlite = "^0.17.0"
graphene = "^3.0"
graphql-server = "^3.0.0-beta.4"
aiohttp-middlewares = "^1.2.1"

[tool.poetry.dev-dependencies]
mypy = "^0.930"
black = "^21.12b0"
pylint = "^2.12.2"
pytest = "^6.2.5"
syrupy = "^1.5.0"
pytest-asyncio = "^0.16.0"
graphene-stubs = "^0.15"

[tool.mypy]
python_version = "3.10"
mypy_path=["money"]
files=["money","tests","examples"]
follow_imports="normal"

[tool.pylint.messages_control]

max-line-length = 120

disable = [
  "no-member",
  "no-self-use",
  "duplicate-code", # this flags imports from `typing` as duplicate 🙄
  "wrong-import-order",
  "too-many-statements",
  "too-few-public-methods",
  "import-outside-toplevel",
  "missing-module-docstring",
  "too-many-return-statements",
  "missing-function-docstring",
]

[tool.pylint.design]
# Allow a larger number of returns to enable
# switch-like statements with many returning cases
max-returns = 20

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
