[tool.poetry]
name = "flurry"
version = "0.1.0"
description = ""
authors = ["Jacob McCollum <jacob.r.mccollum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.dev-dependencies]
mypy = "^0.931"
pytest = "^6.2.5"
black = "^21.12-beta.0"
graphene-stubs = "^0.15"
pytest-asyncio = "^0.17.0"
syrupy = "^1.7.0"
pylint = "^2.12.2"

[tool.mypy]
python_version = "3.10"
follow_imports = "normal"
mypy_path = [
    "flurry.core",
    "flurry.graphql",
    "flurry.postgres",
    "flurry.web",
    "flurry.util",
]
files = ["."]
exclude = ["tests"]
namespace_packages = true
explicit_package_bases = true
strict = true
warn_return_any = false
check_untyped_defs = true
no_implicit_optional = false
disallow_untyped_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "no-member",
    "no-self-use",
    "duplicate-code",             # this flags imports from `typing` as duplicate 🙄
    "wrong-import-order",
    "too-many-statements",
    "too-few-public-methods",
    "import-outside-toplevel",
    "missing-module-docstring",
    "too-many-return-statements",
    "missing-function-docstring",
]

[tool.pylint.design]
# Allow a larger number of returns to enable
# switch-like statements with many returning cases
max-returns = 20

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
