[tool.poetry]
name = "fete-graphql"
version = "0.1.0"
description = ""
authors = ["Jacob McCollum <jacob.r.mccollum@gmail.com>"]
readme = "README.md"
packages = [{ include = "fete" }]

[tool.poetry.dependencies]
python = "^3.10"
graphene = "^3.0"
aiohttp = "^3.8.1"
aiohttp-middlewares = "^1.2.1"
"fete-core" = "^0.1.0"
graphql-core = "<3.2.0"

[tool.poetry.group.dev.dependencies]
"fete-core" = { path = "../fete.core", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
