[tool.poetry]
name = "fete-web"
version = "0.1.0"
description = ""
authors = ["Jacob McCollum <jacob.r.mccollum@gmail.com>"]
readme = "README.md"
packages = [{ include = "fete" }]

[tool.poetry.dependencies]
python = "^3.10"
stringcase = "^1.2.0"
"fete-core" = "^0.1.0"

[tool.poetry.dev-dependencies]
"fete-core" = { path = "../fete.core", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
