[tool.poetry]
name = "flurry-postgres"
version = "0.1.0"
description = ""
authors = ["Jacob McCollum <jacob.r.mccollum@gmail.com>"]
readme = "README.md"
packages = [{ include = "flurry" }]

[tool.poetry.dependencies]
python = "^3.10"
aiopg = "^1.3.3"
"flurry-util" = "^0.1.0"
"flurry-core" = "^0.1.0"

[tool.poetry.dev-dependencies]
"flurry-util" = { path = "../flurry.util", develop = true }
"flurry-core" = { path = "../flurry.core", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
